--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -6,13 +6,11 @@
     
     <main class="main-content-container">
         <div class="main-content main-content-list container">
-            <div class="recipe recipe-list-item">
-                <div class="recipe-listcover">
-                    <img src="https://via.placeholder.com/1280x720.png/269fe6" alt="temporario">
-                </div>
-            </div>
+            {% include 'recipes/partials/recipe.html' %}
         </div>
     </main>
+
+    {%include 'recipes/partials/footer.html'%}
 </body>
 
 </html>
