--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -1,16 +1,16 @@
 <div class="recipe recipe-list-item">
     <div class="recipe-listcover">
-        <img src="https://via.placeholder.com/1280x720.png/269fe6" alt="temporario">
+        <img src="{{ recipe.cover.url }}"alt="temporario">
     </div>
     <div class="recipe-title-container">
-        <h2 class="recipe-title">Bolo de Cenoura</h2>
+        <h2 class="recipe-title">{{recipe.title}}</h2>
     </div>
 
     <div class="recipe-author">
         <span class="recipe-author-item">
 
             <i class="fas fa-user"><ion-icon name="accessibility-sharp"></ion-icon></i>
-            Estefany de melo
+            {{recipe.author.first_name}}{{recipe.author.last_name}}
         </span>
         <span class="recipe-author-item">
             <i class="fas fa-calendar-alt"><ion-icon name="calendar-sharp"></ion-icon></i>
@@ -19,26 +19,26 @@
         <span class="recipe-author-item">
             <a href="/recipes/category/cafe-da-manha">
                 <i class="fas fa-layer-group"><ion-icon name="cafe-sharp"></ion-icon></i>
-                <span>Café da manhã</span>
+                <span>{{recipe.category.name}}</span>
             </a>
         </span>
     </div>
 
     <div class="recipe-content">
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Suscipit, dolor harum? Eius perspiciatis fugit esse quae, corrupti quaerat impedit placeat laudantium pariatur accusamus distinctio accusantium ipsam aspernatur corporis nostrum nisi?</p>
+        <p>{{recipes.description}}</p>
     </div>
 
     <div class="recipe-meta-container">
         <div class="recipe-meta recipe-preparation">
             <h3 class="recipe-meta-title"> <i class="fas fa-stopwatch"><ion-icon name="alarm-sharp"></ion-icon></i> Preparo</h3>
             <div class="recipe-meta-text">
-                0 Minutos
+                {{recipe.preparation_time}}
             </div>
         </div>
         <div class="recipe-meta recipe-servings">
             <h3 class="recipe-meta-title"><i class="fas fa-pizza-slice"><ion-icon name="pizza-sharp"></ion-icon></i> Porções</h3>
             <div class="recipe-meta-text">
-                0 Porções
+                {{recipe.servings}}
             </div>
         </div>
     </div>
