--- a/recipes/static/recipes/css/style.css
+++ b/recipes/static/recipes/css/style.css
@@ -169,6 +169,7 @@ h1,h2,h3,h4,h5,h6{
 
 .recipe-list-item{
     max-width: 64rem;
+    height: fit-content;
 }
 
 
@@ -181,6 +182,12 @@ h1,h2,h3,h4,h5,h6{
 .recipe-title-container{
     padding: var(--spacing-gutter-medium);
     padding-bottom: 2rem;
+}
+
+
+.recipe-title-container a {
+   text-decoration: none;
+   color: var(--color-primary-dark);
 }
 
 
@@ -263,6 +270,11 @@ h1,h2,h3,h4,h5,h6{
 .recipe-list-item:hover{
     transform: scale(1);
     box-shadow: -5px 5px 15px rgba(0,0,0, 0.2);
+}
+
+
+.preparation-steps{
+    padding: var(--spacing-gutter-medium);
 }
 
 
