--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -1,9 +1,15 @@
 <div class="recipe recipe-list-item">
     <div class="recipe-listcover">
-        <img src="{{ recipe.cover.url }}"alt="temporario">
+        <a href="{% url 'recipes-recipe' recipe.id %}">
+            <img src="{{ recipe.cover.url }}"alt="temporario">
+        </a>
     </div>
     <div class="recipe-title-container">
-        <h2 class="recipe-title">{{recipe.title}}</h2>
+        <h2 class="recipe-title">
+            <a href="{% url 'recipes-recipe' recipe.id %}">
+                {{recipe.title}}
+            </a>
+        </h2>
     </div>
 
     <div class="recipe-author">
@@ -42,10 +48,19 @@
             </div>
         </div>
     </div>
-    <footer class="recipe-footer">
-        <a clas="recipe-read-more button button-dark button-full-width" href="">
-            <i class="fas fa-eye"><ion-icon name="eye-sharp"></ion-icon></i>
-            <span>ver mais...</span>
-        </a>
-    </footer>
+
+    {% if is_detail_page is not True %}
+        <footer class="recipe-footer">
+            <a clas="recipe-read-more button button-dark button-full-width" href="">
+                <i class="fas fa-eye"><ion-icon name="eye-sharp"></ion-icon></i>
+                <span>ver mais...</span>
+            </a>
+        </footer>
+    {% endif %}
+
+    {% if is_detail_page is True %}
+        <div class="preparation-steps">
+            {{ recipe.preparation_steps|linebreaksbr }}
+        </div>
+    {% endif %}
 </div>
