--- a/recipes/templates/recipes/partials/header.html
+++ b/recipes/templates/recipes/partials/header.html
@@ -1,7 +1,7 @@
 <header class="main-header-container"> 
     <div class="main-header container">
         <h1>
-            <a class="main-logo" href="{% url 'recipes-home' %}">
+            <a class="main-logo" href="{% url 'recipes:home' %}">
                 <ion-icon name="restaurant" class="main-logo-icon"></ion-icon>
                 <span class="main-logo-text">Recipes</span>
             </a>
