--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -1,33 +1,50 @@
 <div class="recipe recipe-list-item">
-    <div class="recipe-listcover">
-        <a href="{% url 'recipes-recipe' recipe.id %}">
-            <img src="{{ recipe.cover.url }}"alt="temporario">
-        </a>
-    </div>
+    {% if recipe.cover %}
+        <div class="recipe-cover">
+            <a href="{% url 'recipes:recipe' recipe.id %}">
+                <img src="{{ recipe.cover.url }}"alt="temporario">
+            </a>
+        </div>
+    {% endif %}
     <div class="recipe-title-container">
         <h2 class="recipe-title">
-            <a href="{% url 'recipes-recipe' recipe.id %}">
+            <a href="{% url 'recipes:recipe' recipe.id %}">
                 {{recipe.title}}
             </a>
         </h2>
     </div>
 
     <div class="recipe-author">
-        <span class="recipe-author-item">
 
+        
+        <span class="recipe-author-item">
             <i class="fas fa-user"><ion-icon name="accessibility-sharp"></ion-icon></i>
-            {{recipe.author.first_name}}{{recipe.author.last_name}}
+            {% if recipe.author is not None %}
+                {% if recipe.author.first_name %}
+                    {{recipe.author.first_name}}{{recipe.author.last_name}}
+                {% else %}
+                    {{recipe.author.username}}
+                {% endif %}
+            {% else %}
+                Desconhecido
+            {% endif %}
         </span>
+   
+
         <span class="recipe-author-item">
             <i class="fas fa-calendar-alt"><ion-icon name="calendar-sharp"></ion-icon></i>
-            17/02/2022 às 14:03
+            {{recipe.created_at}}
         </span>
-        <span class="recipe-author-item">
-            <a href="/recipes/category/cafe-da-manha">
-                <i class="fas fa-layer-group"><ion-icon name="cafe-sharp"></ion-icon></i>
-                <span>{{recipe.category.name}}</span>
-            </a>
-        </span>
+
+
+        {% if recipe.category is not None %}
+            <span class="recipe-author-item">
+                <a href="{% url 'recipes:category' recipe.category.id %}">
+                    <i class="fas fa-layer-group"><ion-icon name="cafe-sharp"></ion-icon></i>
+                    <span>{{recipe.category.name}}</span>
+                </a>
+            </span>
+        {% endif %}
     </div>
 
     <div class="recipe-content">
