--- a/recipes/static/recipes/css/style.css
+++ b/recipes/static/recipes/css/style.css
@@ -259,15 +259,13 @@ h1,h2,h3,h4,h5,h6{
 }
 
 
-.main-content-detail,
-.recipe-list-item{
+.main-content-detail .recipe-list-item{
     max-width: 84rem;
     margin: 0 auto;
 }
 
 
-.main-content-detail,
-.recipe-list-item:hover{
+.main-content-detail .recipe-list-item:hover{
     transform: scale(1);
     box-shadow: -5px 5px 15px rgba(0,0,0, 0.2);
 }
