--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -1,3 +1,5 @@
+
+
 <div class="recipe recipe-list-item">
     {% if recipe.cover %}
         <div class="recipe-cover">
@@ -65,7 +67,7 @@
 
     {% if is_detail_page is not True %}
         <footer class="recipe-footer">
-            <a clas="recipe-read-more button button-dark button-full-width" href="">
+            <a clas="recipe-read-more button button-dark button-full-width" href="{% url 'recipes:recipe' recipe.id %}">
                 <i class="fas fa-eye"><ion-icon name="eye-sharp"></ion-icon></i>
                 <span>ver mais...</span>
             </a>
