--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -19,7 +19,7 @@
     <div class="recipe-author">
         
         <span class="recipe-author-item">
-            <i class="fas fa-user"><ion-icon name="accessibility-sharp"></ion-icon></i>
+            <ion-icon name="accessibility-sharp"></ion-icon>
             {% if recipe.author is not None %}
                 {% if recipe.author.first_name %}
                     {{recipe.author.first_name}}{{recipe.author.last_name}}
@@ -32,14 +32,14 @@
         </span>
 
         <span class="recipe-author-item">
-            <i class="fas fa-calendar-alt"><ion-icon name="calendar-sharp"></ion-icon></i>
+            <ion-icon name="calendar-sharp"></ion-icon>
             {{recipe.created_at}}
         </span>
 
         {% if recipe.category is not None %}
             <span class="recipe-author-item">
                 <a href="{% url 'recipes:category' recipe.category.id %}">
-                    <i class="fas fa-layer-group"><ion-icon name="cafe-sharp"></ion-icon></i>
+                    <ion-icon name="cafe-sharp"></ion-icon>
                     <span>{{recipe.category.name}}</span>
                 </a>
             </span>
@@ -52,13 +52,13 @@
 
     <div class="recipe-meta-container">
         <div class="recipe-meta recipe-preparation">
-            <h3 class="recipe-meta-title"> <i class="fas fa-stopwatch"><ion-icon name="alarm-sharp"></ion-icon></i> Preparo</h3>
+            <h3 class="recipe-meta-title"> <ion-icon name="alarm-sharp"></ion-icon> Preparo</h3>
             <div class="recipe-meta-text">
                 {{recipe.preparation_time}}
             </div>
         </div>
         <div class="recipe-meta recipe-servings">
-            <h3 class="recipe-meta-title"><i class="fas fa-pizza-slice"><ion-icon name="pizza-sharp"></ion-icon></i> Porções</h3>
+            <h3 class="recipe-meta-title"><ion-icon name="pizza-sharp"></ion-icon> Porções</h3>
             <div class="recipe-meta-text">
                 {{recipe.servings}}
             </div>
