criação e teste da search view function

--- a/recipes/templates/recipes/partials/header.html
+++ b/recipes/templates/recipes/partials/header.html
@@ -2,8 +2,8 @@
     <div class="main-header container">
         <h1>
             <a class="main-logo" href="{% url 'recipes:home' %}">
-                <ion-icon name="restaurant" class="main-logo-icon"></ion-icon>
-                <span class="main-logo-text">Recipes</span>
+                <ion-icon name="heart-sharp"></ion-icon>
+                <span class="main-logo-text">Receitas Doces</span>
             </a>
         </h1>
     </div>
