testando filtro aplicado ao campo de busca

--- a/recipes/templates/recipes/partials/footer.html
+++ b/recipes/templates/recipes/partials/footer.html
@@ -1,5 +1,6 @@
 <footer class="main-footer">
     <div class="developer">
+        <ion-icon name="person"></ion-icon>
         <a href="" target="_blank">Estefany Melo</a>
     </div>
 
