--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -19,7 +19,7 @@
     <div class="recipe-author">
         
         <span class="recipe-author-item">
-            <ion-icon name="accessibility-sharp"></ion-icon>
+            <ion-icon name="people"></ion-icon>
             {% if recipe.author is not None %}
                 {% if recipe.author.first_name %}
                     {{recipe.author.first_name}}{{recipe.author.last_name}}
