revisão de código dos testes

--- a/recipes/templates/recipes/partials/footer.html
+++ b/recipes/templates/recipes/partials/footer.html
@@ -5,6 +5,7 @@
     </div>
 
     <div class="powered">
+        <i class="devicon-django-plain"></i>
         <a href="" target="_blank">Curso de Django</a>
     </div>
 </footer>
