--- a/recipes/templates/recipes/partials/head.html
+++ b/recipes/templates/recipes/partials/head.html
@@ -6,6 +6,7 @@
     
 <!--Link de Icones-->
 <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"> 
 
 <!--Link da Fonte-->
 <link rel="preconnect" href="https://fonts.googleapis.com">
