--- a/recipes/templates/recipes/pages/home.html
+++ b/recipes/templates/recipes/pages/home.html
@@ -3,21 +3,16 @@
 {% block title %}Home |{% endblock title %}Home
 
 {% block content %}
-{% if messages%}
-<div class="main-content center container">
-    {% for message in messages %}
-        {{ message }}
-    {% endfor %}
-</div>
-{% endif %}
+
+{% include 'recipes/partials/messages.html' %}
 
 <div class="main-content main-content-list container">
-    {% for recipe in recipes %}
+{% for recipe in recipes %}
     {% include 'recipes/partials/recipe.html' %}
-    {% empty%}
+    {% empty %}
     <div class="center m-y">
         <h1>No recipes found here</h1>
     </div>
-    {% endfor %}
+{% endfor %}
 </div>
 {% endblock content %}
