--- a/authors/templates/authors/pages/register_view.html
+++ b/authors/templates/authors/pages/register_view.html
@@ -9,6 +9,8 @@
 
     <div class="main-content container">
         <form action="" method="POST">
+            {% csrf_token %}
+
             <div class="form-content form-content-grid">
                 {% for field in form %}
                     <div class="form-group">
