Criando teste para o Placeholder

--- a/recipes/static/recipes/css/style.css
+++ b/recipes/static/recipes/css/style.css
@@ -351,6 +351,7 @@
     display: flex;
     flex-flow: color nowrap;
     gap: calc(var(--spacing-gutter-medium) / 2);
+    align-items: center;
   }
   .message {
     padding: 1rem;
