--- a/authors/templates/authors/pages/login.html
+++ b/authors/templates/authors/pages/login.html
@@ -5,6 +5,11 @@
 {% block content %}
     <div class="main-content center container">
         <h2>Login</h2>
+
+        {% if request.user.is_authenticated %}
+        <p> Your are logged in with</p>
+        {{ request.user.username }}
+        {% endif %}
     </div>
 
    {% include 'global/partials/messages.html' %}
