criando dashboard do autor

--- a/base_static/global/css/style.css
+++ b/base_static/global/css/style.css
@@ -326,7 +326,9 @@
     color: var(--color-error-dark);
   }
 
-  .form-content input {
+  .form-content input,
+  .form-content textarea,
+  .form-content select {
     width: 100%;
     padding: 1rem;
     border-radius: .4rem;
@@ -358,6 +360,10 @@
   .inline-form{
     display: inline;
     
+  }
+
+  .span-2 {
+    grid-column: span 2;
   }
 
   
@@ -412,9 +418,33 @@
     color: var(--color-debug-dark);
   }
 
+  /* Authors */
+
+  .login-message{
+    margin: 1rem 0;
+  }
+
+  .authors-dashboard-container{
+    max-width: 64rem;
+    text-align: left;
+    padding: var(--spacing-gutter-medium);
+    margin: 0 auto;
+  }
+
+  .authors-dashboard-container h3,
+  .authors-dashboard-container p,
+  .authors-dashboard-container ul {
+    list-style-type: none;
+    margin: 1rem 0;
+  }
+
   /* Generics */
 .center{
     text-align: center;
+}
+
+.left{
+  text-align: left;
 }
 
 
