--- a/base_templates/global/partials/forms.html
+++ b/base_templates/global/partials/forms.html
@@ -1,5 +1,11 @@
 <div class="main-content container">
-    <form class="main-form" action="{{ form_action }}" method="POST">
+    <form 
+        class="main-form" 
+        action="{{ form_action }}" 
+        method="POST"
+        enctype="multipart/form-data"
+        
+        >
         {% csrf_token %}
 
         <div class="form-content form-content-grid">
@@ -14,6 +20,11 @@
 
                     {{ field.errors }}
                 </div>
+
+                {% if field.name == 'cover' and field.value.url %}
+                    <div class="span-2">
+                        <img src="{{ field.value.url }}" alt="Capa para {{ recipe.title }}">
+                {% endif %}
             {% endfor %}
         </div>
 
