--- a/recipes/templates/recipes/partials/recipe.html
+++ b/recipes/templates/recipes/partials/recipe.html
@@ -17,13 +17,23 @@
     <div class="recipe-author">
         
         <span class="recipe-author-item">
+
+            {% if recipe.author.profile %}
+            <a href="{% url 'authors:profile' recipe.author.profile.id %}">
+            {% endif %}
+
             <ion-icon name="people"></ion-icon>
+
             {% if recipe.author is not None %}
-                {% if recipe.author.first_name %}
-                    {{recipe.author.first_name}}{{recipe.author.last_name}}
-                {% else %}
-                    {{recipe.author.username}}
-                {% endif %}
+            {% if recipe.author.first_name %}
+                {{recipe.author.first_name}}{{recipe.author.last_name}}
+            {% else %}
+                {{recipe.author.username}}
+            {% endif %}
+
+            {% if recipe.author.profile %}
+            </a>
+            {% endif %}
             {%else%}
                 Desconhecido
             {% endif %}
